# kiwii

./: .gitignore  Dockerfile  Makefile  README.md  cli.py  poetry.requirements.txt  pyproject.toml
kiwii/: __init__.py  __main__.py  kiwii.py
kiwii/architecture/: __init__.py
kiwii/architecture/agent/agent/: __init__.py  agent.py
kiwii/architecture/agent/data/: __init__.py  data.py
kiwii/architecture/agent/parser/: __init__.py  consts.py  parser.py
kiwii/architecture/agent/shared/: __init__.py
kiwii/architecture/client/parser/: parser.py
kiwii/architecture/server/: __init__.py
kiwii/architecture/server/api/: __init__.py  api.py  auth.py
kiwii/architecture/server/data/: __init__.py  data.py
kiwii/architecture/server/logic/: __init__.py
kiwii/architecture/shared/: __init__.py  endpoints.py  headers.py  patterns.py  route_paths.py  routes.py  types.py
kiwii/data/: __init__.py  data.py  datalayer.py  types.py
kiwii/data/data_structures/: __init__.py  credentials.py  datastructure.py  user.py
kiwii/data/models/: __init__.py  datalayer.py
kiwii/models/: subcommand.py
kiwii/parser/: __init__.py  consts.py  parser.py
kiwii/parser/subcommands/: __init__.py  subcommands.py
kiwii/shared/: __init__.py  argparse_utils.py  logging_utils.py  path_utils.py  types.py
kiwii/shared/logging/: __init__.py  componentloggername.py  consts.py  exitonexceptionhandler.py  logging.py
kiwii/shared/models/: __init__.py  argument.py  storetrueargument.py  subparser.py  subparseraction.py
src/kiwii/: __init__.py
src/kiwii/models/: __init__.py
(+82 files in other folders)
